[gd_scene load_steps=12 format=2]

[ext_resource path="res://ImageAssets/misc/stone_2.png" type="Texture" id=1]
[ext_resource path="res://CustomerSceneScripts/tyanak-cust.gd" type="Script" id=2]
[ext_resource path="res://AnimationAssets/tnak.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 15 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "angry"
length = 3.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30, 60 ]
}

[sub_resource type="Animation" id=6]
resource_name = "atk"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 60, 78 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idleTemp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 5 )

[node name="Tyanak-enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["customers"]]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )
hframes = 30
vframes = 3
frame = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/angry = SubResource( 5 )
anims/atk = SubResource( 6 )
anims/idleTemp = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="Area2D"]
anim_player = NodePath("../AnimationPlayer")

[node name="KineCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]

[node name="Bullet" type="Area2D" parent="." groups=["bullet", "customers"]]
position = Vector2( 30, 0 )

[node name="Sprite" type="Sprite" parent="Bullet"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Bullet" to="." method="_on_Bullet_area_entered"]
